add front-end feature and fix MySQL connection issue

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+# Node
+node_modules/
+build/
+
+# Java
+*.class
